BEGIN;

CREATE TABLE indirizzo (
    id INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    nazione TEXT,
    provincia TEXT NOT NULL,
    comune TEXT NOT NULL,
    cap TEXT,
    indirizzo TEXT NOT NULL,
    civico TEXT,
    scala TEXT,
    interno TEXT
);

CREATE TABLE dati_catastali (
    id INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    codice_comunale TEXT NOT NULL,
    foglio INTEGER NOT NULL,
    particella INTEGER NOT NULL,
    subalterno INTEGER NOT NULL,
    categoria TEXT NOT NULL,
    consistenza NUMERIC(10, 2) NOT NULL,
    rendita NUMERIC(12, 2) NOT NULL,
    CONSTRAINT uq_dati_catastali_identificazione
        UNIQUE (codice_comunale, foglio, particella, subalterno)
);

CREATE TABLE immobile (
    id INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    nome TEXT NOT NULL,
    indirizzo_id INTEGER NOT NULL REFERENCES indirizzo(id),
    dati_catastali_id INTEGER NOT NULL UNIQUE REFERENCES dati_catastali(id)
);

CREATE TABLE persona (
    id INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    nome TEXT NOT NULL,
    cognome TEXT NOT NULL,
    luogo_nascita TEXT NOT NULL,
    data_nascita DATE NOT NULL,
    codice_fiscale TEXT NOT NULL UNIQUE,
    residenza_id INTEGER NOT NULL REFERENCES indirizzo(id)
);

CREATE TABLE documento_riconoscimento (
    id INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    persona_id INTEGER NOT NULL UNIQUE REFERENCES persona(id),
    tipo TEXT NOT NULL,
    organo_emittente TEXT NOT NULL,
    data_rilascio DATE NOT NULL,
    data_scadenza DATE NOT NULL,
    numero TEXT NOT NULL,
    CONSTRAINT ck_documento_riconoscimento_tipo
        CHECK (tipo IN ('carta d''identità', 'passaporto'))
);

CREATE TABLE tipologia_contrattuale (
    id INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    denominazione TEXT NOT NULL UNIQUE,
    durata INTEGER NOT NULL,
    rinnovo INTEGER NOT NULL,
    CONSTRAINT ck_tipologia_contrattuale_durata
        CHECK (durata > 0),
    CONSTRAINT ck_tipologia_contrattuale_rinnovo
        CHECK (rinnovo > 0)
);

CREATE TABLE articolo (
    id INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    tipologia_id INTEGER NOT NULL REFERENCES tipologia_contrattuale(id),
    num_articolo INTEGER NOT NULL,
    num_parte INTEGER NOT NULL,
    titolo TEXT NOT NULL,
    sottotitolo TEXT,
    descrizione TEXT NOT NULL,
    CONSTRAINT uq_articolo_tipologia_numero_parte
        UNIQUE (tipologia_id, num_articolo, num_parte)
);

CREATE TABLE contratto (
    id INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    nome_descrizione TEXT NOT NULL,
    immobile_id INTEGER NOT NULL REFERENCES immobile(id),
    proprietario_id INTEGER NOT NULL REFERENCES persona(id),
    inquilino_id INTEGER NOT NULL REFERENCES persona(id),
    tipologia_id INTEGER NOT NULL REFERENCES tipologia_contrattuale(id),
    dal DATE NOT NULL,
    al DATE NOT NULL,
    canone_mensile NUMERIC(12, 2) NOT NULL,
    giorno_pagamento INTEGER NOT NULL,
    registrato_il DATE NOT NULL,
    contenuto TEXT NOT NULL,
    CONSTRAINT ck_contratto_periodo
        CHECK (al >= dal),
    CONSTRAINT ck_contratto_giorno_pagamento
        CHECK (giorno_pagamento BETWEEN 1 AND 28)
);

CREATE INDEX idx_contratto_immobile_periodo
    ON contratto (immobile_id, dal, al);

CREATE TABLE pagamento (
    id INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    contratto_id INTEGER NOT NULL REFERENCES contratto(id),
    anno_competenza INTEGER NOT NULL,
    mese_competenza INTEGER NOT NULL,
    data_pagamento DATE NOT NULL,
    importo NUMERIC(12, 2) NOT NULL,
    CONSTRAINT ck_pagamento_mese_competenza
        CHECK (mese_competenza BETWEEN 1 AND 12),
    CONSTRAINT uq_pagamento_competenza
        UNIQUE (contratto_id, anno_competenza, mese_competenza)
);

CREATE TABLE bozza_contratto (
    id_bozza INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    immobile_id INTEGER UNIQUE REFERENCES immobile(id),
    dati JSONB NOT NULL
);

COMMIT;
